Uploading changes before giving laptop back

--- a/week-7/javascript-module-pattern-workshop/SpecRunner.html
+++ b/week-7/javascript-module-pattern-workshop/SpecRunner.html
@@ -14,12 +14,14 @@
     <!-- include source files here... -->
     <script src="src/exclaim.js"></script>
     <script src="src/question.js"></script>
-    <script src="src/interrobang.js"></script>
+    <script src="src/interrobangsmiley.js"></script>
+    <script src="src/smiley.js"></script>
 
     <!-- include spec files here... -->
     <script src="test/exclaim-spec.js"></script>
-    <script src="test/question-spec.js"></script> 
-    <script src="test/interrobang-spec.js"></script>
+    <script src="test/question-spec.js"></script>
+    <script src="test/interrobangsmiley-spec.js"></script>
+    <script src="test/smiley-spec.js"></script>
   </head>
 
   <body></body>
